# shared_binutils

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  update-config.yaml
config/: Cargo.toml  init.lua
config/src/: lib.rs
fixturify/: Cargo.toml  README.md
fixturify/src/: lib.rs
global/: Cargo.toml
global/src/: build_utils.rs  tmux.rs
global/src/tmux/: mod.rs
internal-bins/: Cargo.toml
internal-bins/src/lua/: mod.rs
latest_bin/: Cargo.toml  README.md
latest_bin/src/: lib.rs
lua_config_utils/: Cargo.toml
lua_config_utils/src/: lib.rs
lua_config_utils/src/lua_type_gen/: mod.rs
shell/: Cargo.toml  Readme.md
shell/src/: lib.rs  prelude.rs
startup_tmux/: Cargo.toml
test_utils/: Cargo.toml
test_utils/src/: lib.rs
