[workspace]
resolver = "2"
members = [
  "config",
  "fixturify",
  "internal-bins",
  "latest_bin",
  "test_utils",
  "global",
  "shell",
  "lua_config_utils",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
version = "0.1.0"
authors = [
  "Robert Jackson <me@rwjblue.com>",
  "David J. Hamilton <david@hamilton.gg>",
]

[workspace.lints.rust]
unreachable_pub = "warn"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"

insta = { version = "1.41.1", features = ["yaml", "toml"] }
tempfile = "3.14.0"
temp-env = "0.3.6"
rand = "0.8.5"
mockito = "1.5.0"
pretty_assertions = "1.4.1"

config = { path = "config" }
latest_bin = { path = "latest_bin" }
test_utils = { path = "test_utils" }
fixturify = { path = "fixturify" }
lua_config_utils = { path = "lua_config_utils" }
cargo_metadata = "0.19.1"
ignore = "0.4.23"
mlua = { version = "0.10.1", features = [
  "lua54",
  "vendored",
  "serialize",
  "anyhow",
] }
regex = "1.11.1"
schemars = "0.8.21"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.134"
shellexpand = "3.1.0"
syn = { version = "2.0", features = ["full"] }
toml = "0.8.19"
ureq = "2.11.0"
glob = "0.3.2"
