[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
latest_bin = { path = "../latest_bin" }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mlua = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
test_utils = { path = "../test_utils" }
fixturify = { path = "../fixturify" }
