[package]
name = "config"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
latest_bin = { path = "../latest_bin" }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mlua = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
test_utils = { path = "../test_utils" }
fixturify = { path = "../fixturify" }
