[package]
name = "config"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
latest_bin = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lua_config_utils = { workspace = true }
serde = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
test_utils = { workspace = true }
fixturify = { workspace = true }
