[package]
name = "fixturify"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert Jackson <me@rwjblue.com>"]

[dependencies]
anyhow = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "toml"] }
tempfile = { workspace = true }
