[package]
name = "fixturify"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
