[package]
name = "global"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["David J. Hamilton <david@hamilton.gg>"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
config = { workspace = true }
latest_bin = { workspace = true }
cargo_metadata = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
shellexpand = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
temp-env = { workspace = true }
rand = { workspace = true }
mockito = { workspace = true }
test_utils = { workspace = true }
fixturify = { workspace = true }
