[package]
name = "global"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
config = { workspace = true }
latest_bin = { workspace = true }
lua_config_utils = { workspace = true }
cargo_metadata = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
shellexpand = { workspace = true }
ureq = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
temp-env = { workspace = true }
rand = { workspace = true }
mockito = { workspace = true }
test_utils = { workspace = true }
fixturify = { workspace = true }
pretty_assertions = { workspace = true }
