[package]
name = "internal-bins"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
latest_bin = { path = "../latest_bin" }
schemars = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
config = { path = "../config" }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
