[package]
name = "internal-bins"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
latest_bin = { path = "../latest_bin" }
schemars = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { path = "../config" }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
