[package]
name = "latest_bin"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert Jackson <me@rwjblue.com>"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "toml"] }
tempfile = { workspace = true }
temp-env = { workspace = true }
rand = { workspace = true }
