[package]
name = "latest_bin"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert Jackson <me@rwjblue.com>"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
temp-env = { workspace = true }
rand = { workspace = true }
