[package]
name = "lua_config_utils"
edition = "2021"
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
mlua = { workspace = true }
shellexpand = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
test_utils = { workspace = true }
fixturify = { workspace = true }

[lints]
workspace = true
