[package]
name = "shell"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["David J. Hamilton <david@hamilton.gg>"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
