[package]
name = "startup_tmux"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robert Jackson <me@rwjblue.com>"]

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.36.1"  }
fixturify = { path = "../fixturify/"}
tempfile = "3.10.1"
